--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,10 @@ acme_sh_default_force_renew: false
 
 acme_sh_default_debug: false
 
+acme_sh_default_challenge_type: "http"
+
+acme_sh_default_http_webroot: "/home/web/http/letsencrypt"
+
 acme_sh_default_dns_provider: "dns_dgon"
 acme_sh_default_dns_provider_api_keys: {}
 acme_sh_default_dns_sleep: 120
