--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -135,7 +135,7 @@
     - not acme_sh_uninstall
   become_user: "{{ acme_sh_become_user }}"
 
-- name: Issue acme.sh certificate(s) (this will sleep for dns_sleep seconds)
+- name: Issue acme.sh certificate(s) (DNS challenge)
   command: >-
     ./acme.sh --issue -d {{ item.domains | join(" -d ") }}
     --dns {{ item.dns_provider | default(acme_sh_default_dns_provider) }}
@@ -153,8 +153,35 @@
   loop: "{{ acme_sh_domains }}"
   when:
     - acme_sh_domains and item.domains is defined and item.domains
+    - (item.challenge_type | default(acme_sh_default_challenge_type)) == "dns"
     - item.dns_provider | default(acme_sh_default_dns_provider)
     - item.dns_provider_api_keys | default(acme_sh_default_dns_provider_api_keys)
+    - item.force_renew is undefined or not item.force_renew
+    - item.custom_command is undefined or not item.custom_command
+    - item.remove is undefined or not item.remove
+    - not acme_sh_uninstall
+  become_user: "{{ acme_sh_become_user }}"
+  register: issue_result
+  changed_when: issue_result.rc == 0 and "Cert success" in issue_result.stdout
+  failed_when: issue_result.rc != 0 and "Domains not changed" not in issue_result.stdout
+
+- name: Issue acme.sh certificate(s) (HTTP challenge)
+  command: >-
+    ./acme.sh --issue -d {{ item.domains | join(" -d ") }}
+    -w {{ item.http_webroot | default(acme_sh_default_http_webroot) }}
+    {{ "--force" if item.force_issue | default(acme_sh_default_force_issue) else "" }}
+    {{ "--staging" if item.staging | default(acme_sh_default_staging) else "" }}
+    {{ "--debug" if item.debug | default(acme_sh_default_debug) else "" }}
+    {{ "--pre-hook " + '"' + item.issue_pre_hook | default(acme_sh_default_issue_pre_hook) + '"' if item.issue_pre_hook | default(acme_sh_default_issue_pre_hook) else "" }}
+    {{ "--post-hook " + '"' + item.issue_post_hook | default(acme_sh_default_issue_post_hook) + '"' if item.issue_post_hook | default(acme_sh_default_issue_post_hook) else "" }}
+    {{ "--renew-hook " + '"' + item.issue_renew_hook | default(acme_sh_default_issue_renew_hook) + '"' if item.issue_renew_hook | default(acme_sh_default_issue_renew_hook) else "" }}
+    {{ item.extra_flags_issue | default(acme_sh_default_extra_flags_issue) }}
+  args:
+    chdir: "~/.acme.sh"
+  loop: "{{ acme_sh_domains }}"
+  when:
+    - acme_sh_domains and item.domains is defined and item.domains
+    - (item.challenge_type | default(acme_sh_default_challenge_type)) == "http"
     - item.force_renew is undefined or not item.force_renew
     - item.custom_command is undefined or not item.custom_command
     - item.remove is undefined or not item.remove
