--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-acme_sh_become_user: "root"
+acme_sh_default_become_user: "root"
 
 acme_sh_git_url: "https://github.com/Neilpang/acme.sh"
 acme_sh_git_version: "master"
