--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -152,7 +152,9 @@
   args:
     chdir: "~/.acme.sh"
   environment: "{{ item.0.dns_provider_api_keys | default(acme_sh_default_dns_provider_api_keys) }}"
-  loop: "{{ acme_sh_domains | subelements(key_types | default(acme_sh_default_key_types)) }}"
+  with_subelements:
+    - "{{ acme_sh_domains }}"
+    - "{{ key_types | default(acme_sh_default_key_types) }}"
   when:
     - acme_sh_domains and item.0.domains is defined and item.0.domains
     - (item.0.challenge_type | default(acme_sh_default_challenge_type)) == "dns"
@@ -182,7 +184,9 @@
     {{ item.0.extra_flags_issue | default(acme_sh_default_extra_flags_issue) }}
   args:
     chdir: "~/.acme.sh"
-  loop: "{{ acme_sh_domains | subelements(key_types | default(acme_sh_default_key_types)) }}"
+  with_subelements:
+    - "{{ acme_sh_domains }}"
+    - "{{ key_types | default(acme_sh_default_key_types) }}"
   when:
     - acme_sh_domains and item.0.domains is defined and item.0.domains
     - (item.0.challenge_type | default(acme_sh_default_challenge_type)) == "http"
@@ -203,7 +207,9 @@
     {{ item.0.extra_flags_renew | default(acme_sh_default_extra_flags_renew) }}
   args:
     chdir: "~/.acme.sh"
-  loop: "{{ acme_sh_domains | subelements(key_types | default(acme_sh_default_key_types)) }}"
+  with_subelements:
+    - "{{ acme_sh_domains }}"
+    - "{{ key_types | default(acme_sh_default_key_types) }}"
   when:
     - acme_sh_domains and item.0.domains is defined and item.0.domains
     - item.0.force_issue is undefined or not item.0.force_issue
