--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -152,9 +152,7 @@
   args:
     chdir: "~/.acme.sh"
   environment: "{{ item.0.dns_provider_api_keys | default(acme_sh_default_dns_provider_api_keys) }}"
-  with_subelements:
-    - "{{ acme_sh_domains }}"
-    - "{{ 'key_types' | default(acme_sh_default_key_types) }}"
+  loop: "{{ lookup('subelements_defaults', acme_sh_domains, 'key_types', {'default_value': acme_sh_default_key_types}) }}"
   when:
     - acme_sh_domains and item.0.domains is defined and item.0.domains
     - (item.0.challenge_type | default(acme_sh_default_challenge_type)) == "dns"
@@ -184,9 +182,7 @@
     {{ item.0.extra_flags_issue | default(acme_sh_default_extra_flags_issue) }}
   args:
     chdir: "~/.acme.sh"
-  with_subelements:
-    - "{{ acme_sh_domains }}"
-    - "{{ 'key_types' | default(acme_sh_default_key_types) }}"
+  loop: "{{ lookup('subelements_defaults', acme_sh_domains, 'key_types', {'default_value': acme_sh_default_key_types}) }}"
   when:
     - acme_sh_domains and item.0.domains is defined and item.0.domains
     - (item.0.challenge_type | default(acme_sh_default_challenge_type)) == "http"
@@ -207,9 +203,7 @@
     {{ item.0.extra_flags_renew | default(acme_sh_default_extra_flags_renew) }}
   args:
     chdir: "~/.acme.sh"
-  with_subelements:
-    - "{{ acme_sh_domains }}"
-    - "{{ 'key_types' | default(acme_sh_default_key_types) }}"
+  loop: "{{ lookup('subelements_defaults', acme_sh_domains, 'key_types', {'default_value': acme_sh_default_key_types}) }}"
   when:
     - acme_sh_domains and item.0.domains is defined and item.0.domains
     - item.0.force_issue is undefined or not item.0.force_issue
@@ -244,7 +238,7 @@
     {{ item.0.extra_flags_install_cert | default(acme_sh_default_extra_flags_install_cert) }}
   args:
     chdir: "~/.acme.sh"
-  loop: "{{ acme_sh_domains | subelements(key_types | default(acme_sh_default_key_types)) }}"
+  loop: "{{ lookup('subelements_defaults', acme_sh_domains, 'key_types', {'default_value': acme_sh_default_key_types}) }}"
   loop_control:
     index_var: domains_index
   when:
